--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -3,7 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Coffee-house</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-16x16.png">
+    <link rel="shortcut icon" href="assets/icons/favicon.ico">
+    <link href="https://fonts.cdnfonts.com/css/inter" rel="stylesheet">
+    <link rel="stylesheet" href="sass/style.css">
 </head>
 <body>
+<header>
+
+</header>
 </body>
 </html>
