--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -34,5 +34,16 @@
         </div>
     </div>
 </header>
+<main>
+    <section class="brand">
+        <div class="brand__text-box">
+            <h1><i>Enjoy</i> premium coffee at our charming cafe</h1>
+            <p>With its inviting atmosphere and delicious coffee options, the Coffee House Resource is a popular
+                destination for coffee lovers and those seeking a warm and inviting space to enjoy their favorite
+                beverage.</p>
+            <button class="button-primary">Menu</button>
+        </div>
+    </section>
+</main>
 </body>
 </html>
