feat: brand button animation

--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -29,7 +29,7 @@
         <div class="header-menu-button">
             <a href="#" class="header-menu-button__link link-animation">
                 <span>Menu</span>
-                <span><img src="assets/icons/coffee-cup.svg" alt="icon cup"></span>
+                <span><img class="cup-icon" src="assets/icons/coffee-cup.svg" alt="icon cup"></span>
             </a>
         </div>
     </div>
@@ -41,7 +41,19 @@
             <p>With its inviting atmosphere and delicious coffee options, the Coffee House Resource is a popular
                 destination for coffee lovers and those seeking a warm and inviting space to enjoy their favorite
                 beverage.</p>
-            <button class="button-primary">Menu</button>
+            <button class="button-primary button-icon-cup-hover"><span class="button-primary__header">Menu</span><span><img class="cup-icon" src="assets/icons/coffee-cup.svg" alt="icon cup"></span></button>
+        </div>
+    </section>
+    <section class="slider">
+        <h2 class="slider__header"></h2>
+        <div class="slider__content">
+            <div class="left-switcher"></div>
+            <div class="slide-wrapper">
+                <div class="slide">
+                    <img src="assets/slider/coffee-slider-1.png" alt="coffee image">
+                </div>
+            </div>
+            <div class="right-switcher"></div>
         </div>
     </section>
 </main>
