feat: gallery section added

--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -77,18 +77,20 @@
         </div>
     </section>
     <section class="gallery">
-        <h2 class="gallery__title">
-            Resource is <i>the perfect and cozy place</i> where you can enjoy a variety of hot beverages, relax, catch up with
-            friends, or get some work done.
-        </h2>
-        <div class="gallery__images">
-            <div class="column">
-                <img src="assets/photo/about-1.png" alt="coffee shop photo">
-                <img src="assets/photo/about-2.png" alt="coffee shop photo">
-            </div>
-            <div class="column">
-                <img src="assets/photo/about-3.png" alt="coffee shop photo">
-                <img src="assets/photo/about-4.png" alt="coffee shop photo">
+        <div class="gallery__wrapper">
+            <h2 class="gallery__title">
+                Resource is <i>the perfect and cozy place</i> where you can enjoy a variety of hot beverages,
+                relax, catch up with friends, or get some work done.
+            </h2>
+            <div class="gallery__images">
+                <div class="column">
+                    <div class="photo"><img src="assets/photo/about-1.png" alt="coffee shop photo"></div>
+                    <div class="photo photo_short"><img src="assets/photo/about-2.png" alt="coffee shop photo"></div>
+                </div>
+                <div class="column">
+                    <div class="photo photo_short"><img src="assets/photo/about-3.png" alt="coffee shop photo"></div>
+                    <div class="photo"><img src="assets/photo/about-4.png" alt="coffee shop photo"></div>
+                </div>
             </div>
         </div>
     </section>
