feat: app section added

--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -41,7 +41,7 @@
             <p>With its inviting atmosphere and delicious coffee options, the Coffee House Resource is a popular
                 destination for coffee lovers and those seeking a warm and inviting space to enjoy their favorite
                 beverage.</p>
-            <button class="button-primary button-icon-cup-hover">
+            <button class="button-primary button-icon-cup">
                 <span class="button-primary__header">Menu</span>
                 <span>
                     <img class="cup-icon" src="assets/icons/coffee-cup.svg" alt="icon cup">
@@ -93,6 +93,31 @@
                 </div>
             </div>
         </div>
+    </section>
+    <section class="app">
+        <div class="app__link">
+            <h2 class="app__title"><i>Download</i> our apps to start ordering</h2>
+            <p class="app__description">Download the Resource app today and experience the comfort of ordering
+                your favorite coffee from wherever you are
+            </p>
+            <div class="app__buttons">
+                <div class="button-primary app-button app-button_apple">
+                    <div class="app-icon app-icon_apple"></div>
+                    <div>
+                        <p class="app-button__text">Available on the</p>
+                        <p class="app-button__header">App Store</p>
+                    </div>
+                </div>
+                <div class="button-primary app-button app-button_android">
+                    <div class="app-icon app-icon_android"></div>
+                    <div>
+                        <p class="app-button__text">Available on</p>
+                        <p class="app-button__header">Google Play</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="app__photo"></div>
     </section>
 </main>
 </body>
