feat: footer added

--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -119,6 +119,50 @@
         </div>
         <div class="app__photo"></div>
     </section>
+    <footer>
+        <div class="footer">
+            <div class="social-media">
+                <h2 class="social-media__header">Sip, Savor, Smile. <i>It’s coffee time!</i></h2>
+                <div class="social-media__links">
+                    <a href="https://twitter.com/" class="twitter social-media-link" target="_blank"
+                       rel="noreferrer noopener">
+                        <div class="icon-twitter"></div>
+                    </a>
+                    <a href="https://www.instagram.com/" class="instagram social-media-link" target="_blank"
+                       rel="noreferrer noopener">
+                        <div class="icon-instagram"></div>
+                    </a>
+                    <a href="https://www.facebook.com/" class="facebook social-media-link" target="_blank"
+                       rel="noreferrer noopener">
+                        <div class="icon-facebook"></div>
+                    </a>
+                </div>
+            </div>
+            <div class="contact-us">
+                <h3>Contact us</h3>
+                <div class="contact-us__link">
+                    <div class="item">
+                    <a class="link-animation map" href="https://maps.app.goo.gl/qzY14mwNHSfTEUcK6" target="_blank">
+                        <div class="img img-pin"></div>
+                        <p>8558 Green Rd., LA</p>
+                    </a>
+                    </div>
+                    <div class="item">
+                    <a class="link-animation phone" href="tel:+16035550123">
+                        <div class="img img-phone"></div>
+                        <p>+1 (603) 555-0123</p>
+                    </a>
+                    </div>
+                    <div class="item">
+                        <a>
+                            <div class="img img-clock"></div>
+                            <p>Mon-Sat: 9:00 AM – 23:00 PM</p>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </main>
 </body>
 </html>
