feat: menu offer section added

--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -14,9 +14,7 @@
 <header class="header">
     <div class="wrapper header__wrapper">
         <a class="header__logo" href="./index.html">
-            <object class="logo-object" data="./assets/logo.svg" type="image/svg+xml">
-                Your browser does not support SVG
-            </object>
+            <img src="assets/logo.svg" alt="logo">
         </a>
         <nav class="header__navigation">
             <ul class="main-navigation">
@@ -27,7 +25,7 @@
             </ul>
         </nav>
         <div class="header-menu-button">
-            <a href="#" class="header-menu-button__link link-animation">
+            <a href="menu.html" class="header-menu-button__link link-animation">
                 <span>Menu</span>
                 <span><img class="cup-icon" src="assets/icons/coffee-cup.svg" alt="icon cup"></span>
             </a>
@@ -119,50 +117,50 @@
         </div>
         <div class="app__photo"></div>
     </section>
-    <footer>
-        <div class="footer">
-            <div class="social-media">
-                <h2 class="social-media__header">Sip, Savor, Smile. <i>It’s coffee time!</i></h2>
-                <div class="social-media__links">
-                    <a href="https://twitter.com/" class="twitter social-media-link" target="_blank"
-                       rel="noreferrer noopener">
-                        <div class="icon-twitter"></div>
-                    </a>
-                    <a href="https://www.instagram.com/" class="instagram social-media-link" target="_blank"
-                       rel="noreferrer noopener">
-                        <div class="icon-instagram"></div>
-                    </a>
-                    <a href="https://www.facebook.com/" class="facebook social-media-link" target="_blank"
-                       rel="noreferrer noopener">
-                        <div class="icon-facebook"></div>
-                    </a>
-                </div>
+</main>
+<footer>
+    <div class="footer">
+        <div class="social-media">
+            <h2 class="social-media__header">Sip, Savor, Smile. <i>It’s coffee time!</i></h2>
+            <div class="social-media__links">
+                <a href="https://twitter.com/" class="twitter social-media-link" target="_blank"
+                   rel="noreferrer noopener">
+                    <div class="icon-twitter"></div>
+                </a>
+                <a href="https://www.instagram.com/" class="instagram social-media-link" target="_blank"
+                   rel="noreferrer noopener">
+                    <div class="icon-instagram"></div>
+                </a>
+                <a href="https://www.facebook.com/" class="facebook social-media-link" target="_blank"
+                   rel="noreferrer noopener">
+                    <div class="icon-facebook"></div>
+                </a>
             </div>
-            <div class="contact-us">
-                <h3>Contact us</h3>
-                <div class="contact-us__link">
-                    <div class="item">
+        </div>
+        <div class="contact-us">
+            <h3>Contact us</h3>
+            <div class="contact-us__link">
+                <div class="item">
                     <a class="link-animation map" href="https://maps.app.goo.gl/qzY14mwNHSfTEUcK6" target="_blank">
                         <div class="img img-pin"></div>
                         <p>8558 Green Rd., LA</p>
                     </a>
-                    </div>
-                    <div class="item">
+                </div>
+                <div class="item">
                     <a class="link-animation phone" href="tel:+16035550123">
                         <div class="img img-phone"></div>
                         <p>+1 (603) 555-0123</p>
                     </a>
-                    </div>
-                    <div class="item">
-                        <a>
-                            <div class="img img-clock"></div>
-                            <p>Mon-Sat: 9:00 AM – 23:00 PM</p>
-                        </a>
-                    </div>
+                </div>
+                <div class="item">
+                    <a>
+                        <div class="img img-clock"></div>
+                        <p>Mon-Sat: 9:00 AM – 23:00 PM</p>
+                    </a>
                 </div>
             </div>
         </div>
-    </footer>
-</main>
+    </div>
+</footer>
 </body>
 </html>
