refactor: dsabled navigation link animate in menu page

--- a/coffee-house/menu.html
+++ b/coffee-house/menu.html
@@ -25,7 +25,7 @@
             </ul>
         </nav>
         <div class="header-menu-button">
-            <a href="#" class="header-menu-button__link link-animation">
+            <a href="#" class="header-menu-button__link link-hovered">
                 <span>Menu</span>
                 <span><img class="cup-icon" src="assets/icons/coffee-cup.svg" alt="icon cup"></span>
             </a>
