refactor: associated nav links and smooth scroll added

--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -18,10 +18,10 @@
         </a>
         <nav class="header__navigation">
             <ul class="main-navigation">
-                <li class="main-navigation__link"><a class="link-animation" href="#">Favorite coffee</a></li>
-                <li class="main-navigation__link"><a class="link-animation" href="#">About</a></li>
-                <li class="main-navigation__link"><a class="link-animation" href="#">Mobile app</a></li>
-                <li class="main-navigation__link"><a class="link-animation" href="#">Contact us</a></li>
+                <li class="main-navigation__link"><a class="link-animation" href="#favourites-coffee">Favorite coffee</a></li>
+                <li class="main-navigation__link"><a class="link-animation" href="#about">About</a></li>
+                <li class="main-navigation__link"><a class="link-animation" href="#mobile-app">Mobile app</a></li>
+                <li class="main-navigation__link"><a class="link-animation" href="#contacts">Contact us</a></li>
             </ul>
         </nav>
         <div class="header-menu-button">
@@ -47,7 +47,7 @@
             </button>
         </div>
     </section>
-    <section class="slider">
+    <section class="slider" id="favourites-coffee">
         <h2 class="slider__header">Choose your <i>favorite</i> coffee</h2>
         <div class="slide-wrapper">
             <div class="switcher">
@@ -74,7 +74,7 @@
             <div class="slider-control__item"></div>
         </div>
     </section>
-    <section class="gallery">
+    <section class="gallery" id="about">
         <div class="gallery__wrapper">
             <h2 class="gallery__title">
                 Resource is <i>the perfect and cozy place</i> where you can enjoy a variety of hot beverages,
@@ -92,7 +92,7 @@
             </div>
         </div>
     </section>
-    <section class="app">
+    <section class="app" id="mobile-app">
         <div class="app__link">
             <h2 class="app__title"><i>Download</i> our apps to start ordering</h2>
             <p class="app__description">Download the Resource app today and experience the comfort of ordering
@@ -118,7 +118,7 @@
         <div class="app__photo"></div>
     </section>
 </main>
-<footer>
+<footer id="contacts">
     <div class="footer">
         <div class="social-media">
             <h2 class="social-media__header">Sip, Savor, Smile. <i>It’s coffee time!</i></h2>
