--- a/coffee-house/menu.html
+++ b/coffee-house/menu.html
@@ -18,10 +18,10 @@
         </a>
         <nav class="header__navigation">
             <ul class="main-navigation">
-                <li class="main-navigation__link"><a class="link-animation" href="#">Favorite coffee</a></li>
-                <li class="main-navigation__link"><a class="link-animation" href="#">About</a></li>
-                <li class="main-navigation__link"><a class="link-animation" href="#">Mobile app</a></li>
-                <li class="main-navigation__link"><a class="link-animation" href="#">Contact us</a></li>
+                <li class="main-navigation__link"><a class="link-animation" href="index.html#favourites-coffee">Favorite coffee</a></li>
+                <li class="main-navigation__link"><a class="link-animation" href="index.html#about">About</a></li>
+                <li class="main-navigation__link"><a class="link-animation" href="index.html#mobile-app">Mobile app</a></li>
+                <li class="main-navigation__link"><a class="link-animation" href="index.html#contacts">Contact us</a></li>
             </ul>
         </nav>
         <div class="header-menu-button">
