--- a/coffee-house/menu.html
+++ b/coffee-house/menu.html
@@ -33,7 +33,7 @@
     </div>
 </header>
 <main>
-    <h1 class="hidden-header"></h1>
+    <h1 class="hidden-header">Coffee House</h1>
     <section class="offer">
         <div class="offer__title">
             <h2>Behind each of our cups hides an <i>amazing surprise</i></h2>
