--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -39,12 +39,12 @@
             <p>With its inviting atmosphere and delicious coffee options, the Coffee House Resource is a popular
                 destination for coffee lovers and those seeking a warm and inviting space to enjoy their favorite
                 beverage.</p>
-            <button class="button-primary button-icon-cup">
+            <a href="menu.html" class="button-primary button-icon-cup">
                 <span class="button-primary__header">Menu</span>
                 <span>
                     <img class="cup-icon" src="assets/icons/coffee-cup.svg" alt="icon cup">
                 </span>
-            </button>
+            </a>
         </div>
     </section>
     <section class="slider" id="favourites-coffee">
