fix: corrected behavior of the contact-us link on the menu page

--- a/coffee-house/menu.html
+++ b/coffee-house/menu.html
@@ -21,7 +21,7 @@
                 <li class="main-navigation__link"><a class="link-animation" href="index.html#favourites-coffee">Favorite coffee</a></li>
                 <li class="main-navigation__link"><a class="link-animation" href="index.html#about">About</a></li>
                 <li class="main-navigation__link"><a class="link-animation" href="index.html#mobile-app">Mobile app</a></li>
-                <li class="main-navigation__link"><a class="link-animation" href="index.html#contacts">Contact us</a></li>
+                <li class="main-navigation__link"><a class="link-animation" href="#contacts">Contact us</a></li>
             </ul>
         </nav>
         <div class="header-menu-button">
@@ -142,7 +142,7 @@
         </div>
     </section>
 </main>
-<footer>
+<footer id="contacts">
     <div class="footer">
         <div class="social-media">
             <h2 class="social-media__header">Sip, Savor, Smile. <i>It’s coffee time!</i></h2>
