--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -34,18 +34,20 @@
     </div>
 </header>
 <main>
-    <section class="brand">
-        <div class="brand__text-box">
-            <h1><i>Enjoy</i> premium coffee at our charming cafe</h1>
-            <p>With its inviting atmosphere and delicious coffee options, the Coffee House Resource is a popular
-                destination for coffee lovers and those seeking a warm and inviting space to enjoy their favorite
-                beverage.</p>
-            <a href="menu.html" class="button-primary button-icon-cup">
-                <span class="button-primary__header">Menu</span>
-                <span>
+    <section class="enjoy">
+        <div class="brand">
+            <div class="brand__text-box">
+                <h1><i>Enjoy</i> premium coffee at our charming cafe</h1>
+                <p>With its inviting atmosphere and delicious coffee options, the Coffee House Resource is a popular
+                    destination for coffee lovers and those seeking a warm and inviting space to enjoy their favorite
+                    beverage.</p>
+                <a href="menu.html" class="button-primary button-icon-cup">
+                    <span class="button-primary__header">Menu</span>
+                    <span>
                     <img class="cup-icon" src="assets/icons/coffee-cup.svg" alt="icon cup">
                 </span>
-            </a>
+                </a>
+            </div>
         </div>
     </section>
     <section class="slider" id="favourites-coffee">
@@ -75,20 +77,22 @@
             <div class="slider-control__item"></div>
         </div>
     </section>
-    <section class="gallery" id="about">
-        <div class="gallery__wrapper">
-            <h2 class="gallery__title">
-                Resource is <i>the perfect and cozy place</i> where you can enjoy a variety of hot beverages,
-                relax, catch up with friends, or get some work done.
-            </h2>
-            <div class="gallery__images">
-                <div class="column">
-                    <div class="photo"><img src="assets/photo/about-1.png" alt="coffee shop photo"></div>
-                    <div class="photo photo_short"><img src="assets/photo/about-2.png" alt="coffee shop photo"></div>
-                </div>
-                <div class="column">
-                    <div class="photo photo_short"><img src="assets/photo/about-3.png" alt="coffee shop photo"></div>
-                    <div class="photo"><img src="assets/photo/about-4.png" alt="coffee shop photo"></div>
+    <section class="about">
+        <div class="gallery" id="about">
+            <div class="gallery__wrapper">
+                <h2 class="gallery__title">
+                    Resource is <i>the perfect and cozy place</i> where you can enjoy a variety of hot beverages,
+                    relax, catch up with friends, or get some work done.
+                </h2>
+                <div class="gallery__images">
+                    <div class="column">
+                        <div class="photo"><img src="assets/photo/about-1.png" alt="coffee shop photo"></div>
+                        <div class="photo photo_short"><img src="assets/photo/about-2.png" alt="coffee shop photo"></div>
+                    </div>
+                    <div class="column">
+                        <div class="photo photo_short"><img src="assets/photo/about-3.png" alt="coffee shop photo"></div>
+                        <div class="photo"><img src="assets/photo/about-4.png" alt="coffee shop photo"></div>
+                    </div>
                 </div>
             </div>
         </div>
