refactor: changed the structure of the gallery section to grid and added a media rule for tablet

--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -85,14 +85,10 @@
                     relax, catch up with friends, or get some work done.
                 </h2>
                 <div class="gallery__images">
-                    <div class="column">
-                        <div class="photo"><img src="assets/photo/about-1.png" alt="coffee shop photo"></div>
-                        <div class="photo photo_short"><img src="assets/photo/about-2.png" alt="coffee shop photo"></div>
-                    </div>
-                    <div class="column">
-                        <div class="photo photo_short"><img src="assets/photo/about-3.png" alt="coffee shop photo"></div>
-                        <div class="photo"><img src="assets/photo/about-4.png" alt="coffee shop photo"></div>
-                    </div>
+                        <div class="photo"></div>
+                        <div class="photo photo_short"></div>
+                        <div class="photo photo_short"></div>
+                        <div class="photo"></div>
                 </div>
             </div>
         </div>
