--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -31,6 +31,9 @@
                 <span><img class="cup-icon" src="assets/icons/coffee-cup.svg" alt="icon cup"></span>
             </a>
         </div>
+        <div class="burger-button">
+            <span></span>
+        </div>
     </div>
 </header>
 <main>
