refactor: js handler for burger page

--- a/coffee-house/menu.html
+++ b/coffee-house/menu.html
@@ -11,13 +11,13 @@
     <link href="https://fonts.cdnfonts.com/css/inter" rel="stylesheet">
     <link rel="stylesheet" href="sass/style.css">
 </head>
-<body>
+<body class="head-bg">
 <header class="header">
-    <div class="wrapper header__wrapper">
-        <a class="header__logo" href="./index.html">
+    <div class="wrapper header__wrapper head-bg">
+        <a class="header__logo head-bg" href="./index.html">
             <img src="assets/logo.svg" alt="logo">
         </a>
-        <nav class="header__navigation">
+        <nav class="header__navigation head-bg">
             <ul class="main-navigation">
                 <li class="main-navigation__link"><a class="link-animation" href="index.html#favourites-coffee">Favorite coffee</a></li>
                 <li class="main-navigation__link"><a class="link-animation" href="index.html#about">About</a></li>
@@ -25,13 +25,13 @@
                 <li class="main-navigation__link"><a class="link-animation" href="#contacts">Contact us</a></li>
             </ul>
         </nav>
-        <div class="header-menu-button">
+        <div class="header-menu-button head-bg">
             <a href="#" class="header-menu-button__link link-hovered">
                 <span>Menu</span>
                 <span><img class="cup-icon" src="assets/icons/coffee-cup.svg" alt="icon cup"></span>
             </a>
         </div>
-        <div class="burger-button">
+        <div class="burger-button head-bg">
             <span></span>
         </div>
     </div>
