fix: header width

--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="sass/style.css">
 </head>
 <body class="head-bg">
-<header class="header">
-    <div class="wrapper header__wrapper head-bg">
+<header class="header wrapper">
+    <div class="header__wrapper head-bg">
         <a class="header__logo head-bg" href="./index.html">
             <img src="assets/logo.svg" alt="logo">
         </a>
