feat: background video Enjoy section

--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -38,6 +38,7 @@
 </header>
 <main>
     <section class="enjoy">
+        <video class="video" src="assets/video/video_coffee.mp4" autoplay muted loop></video>
         <div class="brand">
             <div class="brand__text-box">
                 <h1><i>Enjoy</i> premium coffee at our charming cafe</h1>
