feat: slider interactive && swiper

--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -57,28 +57,53 @@
     <section class="slider" id="favourites-coffee">
         <h2 class="slider__header">Choose your <i>favorite</i> coffee</h2>
         <div class="slide-wrapper">
-            <div class="switcher">
-                <div class="left-switcher"></div>
+            <div class="switcher btn-left">
+                <div class="left-switcher btn-left"></div>
             </div>
-            <div class="slider__content">
-                <div class="slide">
-                    <div class="slide__image"></div>
-                    <div class="slide__dish">
-                        <h3 class="dish__title">S’mores Frappuccino</h3>
-                        <p class="dish__description">This new drink takes an espresso and mixes it with brown sugar and
-                            cinnamon before being topped with oat milk.</p>
-                        <h3 class="price">&#36;5.50</h3>
+            <div class="slider-content">
+                <div class="slide-container">
+                    <div class="slide-frame">
+                        <div class="slide slide-frappuccino">
+                            <div class="slide__image"></div>
+                            <div class="slide__dish">
+                                <h3 class="dish__title">S’mores Frappuccino</h3>
+                                <p class="dish__description">This new drink takes an espresso and mixes it with brown sugar and cinnamon before being topped with oat milk.</p>
+                                <h3 class="price">&#36;5.50</h3>
+                            </div>
+                        </div>
+                        <div class="slide slide-macchiato">
+                            <div class="slide__image"></div>
+                            <div class="slide__dish">
+                                <h3 class="dish__title">Caramel Macchiato</h3>
+                                <p class="dish__description">Fragrant and unique classic espresso with rich caramel-peanut syrup, with cream under whipped thick foam.</p>
+                                <h3 class="price">&#36;5.00</h3>
+                            </div>
+                        </div>
+                        <div class="slide slide-ice">
+                            <div class="slide__image"></div>
+                            <div class="slide__dish">
+                                <h3 class="dish__title">Ice coffee</h3>
+                                <p class="dish__description">A popular summer drink that tones and invigorates. Prepared from coffee, milk and ice.</p>
+                                <h3 class="price">&#36;4.50</h3>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="switcher">
-                <div class="right-switcher"></div>
+            <div class="switcher btn-right">
+                <div class="right-switcher btn-right"></div>
             </div>
         </div>
-        <div class="slider-control control">
-            <div class="slider-control__item active"></div>
-            <div class="slider-control__item"></div>
-            <div class="slider-control__item"></div>
+        <div class="slider-control">
+            <div class="slider-control__item">
+                <div class="slider-control__item control"></div>
+            </div>
+            <div class="slider-control__item">
+                <div class="slider-control__item control"></div>
+            </div>
+            <div class="slider-control__item">
+                <div class="slider-control__item control"></div>
+            </div>
         </div>
     </section>
     <section class="about">
