--- a/coffee-house/menu.html
+++ b/coffee-house/menu.html
@@ -43,19 +43,19 @@
             <h2>Behind each of our cups hides an <i>amazing surprise</i></h2>
         </div>
         <div class="offer__tabs">
-            <div class="tab active">
+            <div class="tab active tab-no-clickable tab-coffee">
                 <div class="img">
                     <div class="img-coffee"></div>
                 </div>
                 <p>Coffee</p>
             </div>
-            <div class="tab">
+            <div class="tab tab-tea">
                 <div class="img">
                     <div class="img-tea"></div>
                 </div>
                 <p>Tea</p>
             </div>
-            <div class="tab">
+            <div class="tab tab-dessert">
                 <div class="img">
                     <div class="img-dessert"></div>
                 </div>
@@ -197,6 +197,6 @@
         </div>
     </div>
 </footer>
-<script src="js/main.js"></script>
+<script src="js/menu.js"></script>
 </body>
 </html>
