--- a/coffee-house/menu.html
+++ b/coffee-house/menu.html
@@ -197,7 +197,7 @@
         </div>
     </div>
 </footer>
-<div class="overlay">
+<div class="overlay modal-hidden">
     <div class="modal-card">
         <div class="modal-img">
             <img src="assets/menu/coffee-1.png" alt="card image">
