update: some things

--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -11,13 +11,13 @@
     <link href="https://fonts.cdnfonts.com/css/inter" rel="stylesheet">
     <link rel="stylesheet" href="sass/style.css">
 </head>
-<body>
-<header class="header">
-    <div class="wrapper header__wrapper">
-        <a class="header__logo" href="./index.html">
+<body class="head-bg">
+<header class="header wrapper">
+    <div class="header__wrapper head-bg">
+        <a class="header__logo head-bg" href="./index.html">
             <img src="assets/logo.svg" alt="logo">
         </a>
-        <nav class="header__navigation">
+        <nav class="header__navigation head-bg">
             <ul class="main-navigation">
                 <li class="main-navigation__link"><a class="link-animation" href="#favourites-coffee">Favorite coffee</a></li>
                 <li class="main-navigation__link"><a class="link-animation" href="#about">About</a></li>
@@ -25,19 +25,20 @@
                 <li class="main-navigation__link"><a class="link-animation" href="#contacts">Contact us</a></li>
             </ul>
         </nav>
-        <div class="header-menu-button">
+        <div class="header-menu-button head-bg">
             <a href="menu.html" class="header-menu-button__link link-animation">
                 <span>Menu</span>
                 <span><img class="cup-icon" src="assets/icons/coffee-cup.svg" alt="icon cup"></span>
             </a>
         </div>
-        <div class="burger-button">
+        <div class="burger-button head-bg">
             <span></span>
         </div>
     </div>
 </header>
 <main>
     <section class="enjoy">
+        <video class="video" src="assets/video/video_coffee.mp4" autoplay muted loop></video>
         <div class="brand">
             <div class="brand__text-box">
                 <h1><i>Enjoy</i> premium coffee at our charming cafe</h1>
@@ -56,28 +57,53 @@
     <section class="slider" id="favourites-coffee">
         <h2 class="slider__header">Choose your <i>favorite</i> coffee</h2>
         <div class="slide-wrapper">
-            <div class="switcher">
-                <div class="left-switcher"></div>
+            <div class="switcher btn-left">
+                <div class="left-switcher btn-left"></div>
             </div>
-            <div class="slider__content">
-                <div class="slide">
-                    <div class="slide__image"></div>
-                    <div class="slide__dish">
-                        <h3 class="dish__title">S’mores Frappuccino</h3>
-                        <p class="dish__description">This new drink takes an espresso and mixes it with brown sugar and
-                            cinnamon before being topped with oat milk.</p>
-                        <h3 class="price">&#36;5.50</h3>
+            <div class="slider-content">
+                <div class="slide-container">
+                    <div class="slide-frame">
+                        <div class="slide slide-frappuccino">
+                            <div class="slide__image"></div>
+                            <div class="slide__dish">
+                                <h3 class="dish__title">S’mores Frappuccino</h3>
+                                <p class="dish__description">This new drink takes an espresso and mixes it with brown sugar and cinnamon before being topped with oat milk.</p>
+                                <h3 class="price">&#36;5.50</h3>
+                            </div>
+                        </div>
+                        <div class="slide slide-macchiato">
+                            <div class="slide__image"></div>
+                            <div class="slide__dish">
+                                <h3 class="dish__title">Caramel Macchiato</h3>
+                                <p class="dish__description">Fragrant and unique classic espresso with rich caramel-peanut syrup, with cream under whipped thick foam.</p>
+                                <h3 class="price">&#36;5.00</h3>
+                            </div>
+                        </div>
+                        <div class="slide slide-ice">
+                            <div class="slide__image"></div>
+                            <div class="slide__dish">
+                                <h3 class="dish__title">Ice coffee</h3>
+                                <p class="dish__description">A popular summer drink that tones and invigorates. Prepared from coffee, milk and ice.</p>
+                                <h3 class="price">&#36;4.50</h3>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="switcher">
-                <div class="right-switcher"></div>
+            <div class="switcher btn-right">
+                <div class="right-switcher btn-right"></div>
             </div>
         </div>
-        <div class="slider-control control">
-            <div class="slider-control__item active"></div>
-            <div class="slider-control__item"></div>
-            <div class="slider-control__item"></div>
+        <div class="slider-control">
+            <div class="slider-control__item">
+                <div class="slider-control__item control"></div>
+            </div>
+            <div class="slider-control__item">
+                <div class="slider-control__item control"></div>
+            </div>
+            <div class="slider-control__item">
+                <div class="slider-control__item control"></div>
+            </div>
         </div>
     </section>
     <section class="about">
@@ -166,5 +192,6 @@
         </div>
     </div>
 </footer>
+<script src="js/main.js"></script>
 </body>
 </html>
