--- a/coffee-house/menu.html
+++ b/coffee-house/menu.html
@@ -11,13 +11,13 @@
     <link href="https://fonts.cdnfonts.com/css/inter" rel="stylesheet">
     <link rel="stylesheet" href="sass/style.css">
 </head>
-<body>
-<header class="header">
-    <div class="wrapper header__wrapper">
-        <a class="header__logo" href="./index.html">
+<body class="head-bg">
+<header class="header wrapper">
+    <div class="header__wrapper head-bg">
+        <a class="header__logo head-bg" href="./index.html">
             <img src="assets/logo.svg" alt="logo">
         </a>
-        <nav class="header__navigation">
+        <nav class="header__navigation head-bg">
             <ul class="main-navigation">
                 <li class="main-navigation__link"><a class="link-animation" href="index.html#favourites-coffee">Favorite coffee</a></li>
                 <li class="main-navigation__link"><a class="link-animation" href="index.html#about">About</a></li>
@@ -25,13 +25,13 @@
                 <li class="main-navigation__link"><a class="link-animation" href="#contacts">Contact us</a></li>
             </ul>
         </nav>
-        <div class="header-menu-button">
+        <div class="header-menu-button head-bg">
             <a href="#" class="header-menu-button__link link-hovered">
                 <span>Menu</span>
                 <span><img class="cup-icon" src="assets/icons/coffee-cup.svg" alt="icon cup"></span>
             </a>
         </div>
-        <div class="burger-button">
+        <div class="burger-button head-bg">
             <span></span>
         </div>
     </div>
@@ -43,19 +43,19 @@
             <h2>Behind each of our cups hides an <i>amazing surprise</i></h2>
         </div>
         <div class="offer__tabs">
-            <div class="tab active">
+            <div class="tab active tab-no-clickable tab-coffee">
                 <div class="img">
                     <div class="img-coffee"></div>
                 </div>
                 <p>Coffee</p>
             </div>
-            <div class="tab">
+            <div class="tab tab-tea">
                 <div class="img">
                     <div class="img-tea"></div>
                 </div>
                 <p>Tea</p>
             </div>
-            <div class="tab">
+            <div class="tab tab-dessert">
                 <div class="img">
                     <div class="img-dessert"></div>
                 </div>
@@ -197,5 +197,63 @@
         </div>
     </div>
 </footer>
+<div class="overlay modal-hidden">
+    <div class="modal-card">
+        <div class="modal-img">
+            <img src="assets/menu/coffee-1.png" alt="card image">
+        </div>
+        <div class="modal-description">
+            <div class="modal-title">
+                <h3>Irish coffee</h3>
+                <p>Fragrant black coffee with Jameson Irish whiskey and whipped milk</p>
+            </div>
+            <div class="modal-size">
+                <p>Size</p>
+                <div class="modal-size-buttons">
+                    <div class="tab active tab-no-clickable">
+                        <div class="tab-icon">S</div>
+                        <p>123</p>
+                    </div>
+                    <div class="tab">
+                        <div class="tab-icon">M</div>
+                        <p>123</p>
+                    </div>
+                    <div class="tab">
+                        <div class="tab-icon">L</div>
+                        <p>123</p>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-additives">
+                <p>Additives</p>
+                <div class="modal-additives-buttons">
+                    <div class="tab">
+                        <div class="tab-icon">1</div>
+                        <p>123</p>
+                    </div>
+                    <div class="tab">
+                        <div class="tab-icon">2</div>
+                        <p>123</p>
+                    </div>
+                    <div class="tab">
+                        <div class="tab-icon">3</div>
+                        <p>123</p>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-total">
+                <h3>Total:</h3>
+                <h3 class="modal-price">$7.00</h3>
+            </div>
+            <div class="modal-info">
+                <img src="assets/icons/info-empty.svg" alt="info">
+                <p>The cost is not final. Download our mobile app to see the final price and place your order. Earn
+                    loyalty points and enjoy your favorite coffee with up to 20% discount.</p>
+            </div>
+            <div class="modal-close-button">Close</div>
+        </div>
+    </div>
+</div>
+<script src="js/menu.js"></script>
 </body>
 </html>
