feat: modal width price change

--- a/coffee-house/menu.html
+++ b/coffee-house/menu.html
@@ -197,63 +197,63 @@
         </div>
     </div>
 </footer>
-<div class="overlay modal-hidden">
-    <div class="modal-card">
-        <div class="modal-img">
-            <img src="assets/menu/coffee-1.png" alt="card image">
-        </div>
-        <div class="modal-description">
-            <div class="modal-title">
-                <h3>Irish coffee</h3>
-                <p>Fragrant black coffee with Jameson Irish whiskey and whipped milk</p>
-            </div>
-            <div class="modal-size">
-                <p>Size</p>
-                <div class="modal-size-buttons">
-                    <div class="tab active tab-no-clickable">
-                        <div class="tab-icon">S</div>
-                        <p>123</p>
-                    </div>
-                    <div class="tab">
-                        <div class="tab-icon">M</div>
-                        <p>123</p>
-                    </div>
-                    <div class="tab">
-                        <div class="tab-icon">L</div>
-                        <p>123</p>
-                    </div>
-                </div>
-            </div>
-            <div class="modal-additives">
-                <p>Additives</p>
-                <div class="modal-additives-buttons">
-                    <div class="tab">
-                        <div class="tab-icon">1</div>
-                        <p>123</p>
-                    </div>
-                    <div class="tab">
-                        <div class="tab-icon">2</div>
-                        <p>123</p>
-                    </div>
-                    <div class="tab">
-                        <div class="tab-icon">3</div>
-                        <p>123</p>
-                    </div>
-                </div>
-            </div>
-            <div class="modal-total">
-                <h3>Total:</h3>
-                <h3 class="modal-price">$7.00</h3>
-            </div>
-            <div class="modal-info">
-                <img src="assets/icons/info-empty.svg" alt="info">
-                <p>The cost is not final. Download our mobile app to see the final price and place your order. Earn
-                    loyalty points and enjoy your favorite coffee with up to 20% discount.</p>
-            </div>
-            <div class="modal-close-button">Close</div>
-        </div>
-    </div>
-</div>
+<!--<div class="overlay modal-hidden">-->
+<!--    <div class="modal-card">-->
+<!--        <div class="modal-img">-->
+<!--            <img src="assets/menu/coffee-1.png" alt="card image">-->
+<!--        </div>-->
+<!--        <div class="modal-description">-->
+<!--            <div class="modal-title">-->
+<!--                <h3>Irish coffee</h3>-->
+<!--                <p>Fragrant black coffee with Jameson Irish whiskey and whipped milk</p>-->
+<!--            </div>-->
+<!--            <div class="modal-size">-->
+<!--                <p>Size</p>-->
+<!--                <div class="modal-size-buttons">-->
+<!--                    <div class="tab tab-size active tab-no-clickable">-->
+<!--                        <div class="tab-icon">S</div>-->
+<!--                        <p>123</p>-->
+<!--                    </div>-->
+<!--                    <div class="tab tab-size">-->
+<!--                        <div class="tab-icon">M</div>-->
+<!--                        <p>123</p>-->
+<!--                    </div>-->
+<!--                    <div class="tab tab-size">-->
+<!--                        <div class="tab-icon">L</div>-->
+<!--                        <p>123</p>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="modal-additives">-->
+<!--                <p>Additives</p>-->
+<!--                <div class="modal-additives-buttons">-->
+<!--                    <div class="tab tab-additives">-->
+<!--                        <div class="tab-icon">1</div>-->
+<!--                        <p>123</p>-->
+<!--                    </div>-->
+<!--                    <div class="tab">-->
+<!--                        <div class="tab-icon">2</div>-->
+<!--                        <p>123</p>-->
+<!--                    </div>-->
+<!--                    <div class="tab">-->
+<!--                        <div class="tab-icon">3</div>-->
+<!--                        <p>123</p>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="modal-total">-->
+<!--                <h3>Total:</h3>-->
+<!--                <h3 class="modal-price">$7.00</h3>-->
+<!--            </div>-->
+<!--            <div class="modal-info">-->
+<!--                <img src="assets/icons/info-empty.svg" alt="info">-->
+<!--                <p>The cost is not final. Download our mobile app to see the final price and place your order. Earn-->
+<!--                    loyalty points and enjoy your favorite coffee with up to 20% discount.</p>-->
+<!--            </div>-->
+<!--            <div class="modal-close-button">Close</div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
 <script src="js/menu.js"></script>
 </body>
 </html>
